fixed letter spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,7 +18,7 @@ html {
   margin-top: -105px;
   margin-left: -237px;
   font-size:11em;
-  letter-spacing:10px;
+  letter-spacing:8px;
 }
 #content_area{
 	
